display a loading icon when retrieving results

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,9 @@
                 <input name="query" class="paper-searchbar--input" type="text" placeholder="enter your query">
                 <input class="paper-searchbar--submit" value="Search" type="submit">
             </form>
-            <h2 class="searchresults--header">Search results for "yolo".</h2>
+            <h2 class="searchresults--header"></h2>
             <ul class="searchresults">
-                <li class="searchresults--item">
+<!--                 <li class="searchresults--item">
                     Paper 1 - Author - Score - Etc.
                 </li>
                 <li class="searchresults--item">
@@ -54,7 +54,7 @@
                 <li class="searchresults--item">
                     Paper 10 - Author - Score - Etc.
                 </li>
-            </ul>
+ -->            </ul>
         </main>
         <footer>
             &copy; 2013 - Collective Intelligence Group 2 (Leon Zwart, Bart Sunter, Baudouin Duthoit, Nino Floris)
