--- a/static/style.css
+++ b/static/style.css
@@ -69,7 +69,7 @@ main {
   margin-left: -64px;
 }
 
-.searchresults--item {
+.searchresultsitem {
   background: rgba(100, 100, 100, .1);
   padding: 20px;
   margin-bottom: 20px;
