fixed integrated features across JS, html and python, rewrite normalizeScore for dictionary, got pagerank fully working (really well tested)

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
                 <section class="paper-searchbar--settings">
                     <input type="checkbox" id="paper-searchbar--settings--independent-features">
                     <label for="paper-searchbar--settings--independent-features">Use Independent Features</label>
-                    <input type="checkbox" id="paper-searchbar--settings--pagerank">
+                    <input type="checkbox" id="paper-searchbar--settings--pagerank" checked>
                     <label for="paper-searchbar--settings--pagerank">Use PageRank</label>
-                    <input type="checkbox" id="paper-searchbar--settings--tfidf">
+                    <input type="checkbox" id="paper-searchbar--settings--tfidf" checked>
                     <label for="paper-searchbar--settings--tfidf">Use TF/IDF</label>
                     <input type="checkbox" id="paper-searchbar--settings--clustering">
                     <label for="paper-searchbar--settings--clustering">Use Clustering</label>
